<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTextWhite"
    android:gravity="center_horizontal"
    tools:context="com.example.admin.testlogin.SettingsActivity">

    <TextView
        style="@style/textHeadVisuals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <LinearLayout
        style="@style/elementVisuals"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchOne"
            style="@style/switchVisuals"
            android:text="@string/switch_one_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchTwo"
            style="@style/switchVisuals"
            android:text="@string/switch_two_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version"
        android:textSize="25dp" />


</LinearLayout>
